# vault-agent-operator

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.mvp.yaml  docker-compose.yaml  go.mod  go.sum  pyproject.toml
config/: default.yaml
config/prompts/: system.md
docs/research/: llm-multi-model-research.md
internal/agent/: agent.go  agent_test.go  doc.go  prompts.go  types.go
internal/api/: doc.go  handlers.go  handlers_test.go  middleware.go  server.go  types.go
internal/config/: config.go  config_test.go  doc.go  types.go
internal/llm/: doc.go  errors.go  openai.go  openai_test.go  tools.go  tools_test.go  types.go
internal/logging/: doc.go  logging.go  logging_test.go
internal/mcp/: client.go  client_test.go  doc.go  errors.go  transport.go  types.go
internal/redaction/: context.go  context_test.go  doc.go  policies.go  policies_test.go  redactor.go  redactor_test.go  sanitizer.go  sanitizer_test.go
internal/scheduler/: doc.go  engine.go  scheduler_test.go  tasks.go
scripts/: generate-certs.sh  healthcheck.sh  seed-vault.sh  test-mvp.sh
src/: __init__.py  logging.py  main.py
src/agent/: __init__.py  core.py  prompts.py  types.py
src/api/: __init__.py  app.py  dependencies.py  schemas.py
src/config/: __init__.py  models.py  settings.py
src/llm/: __init__.py  provider.py
src/mcp/: __init__.py  client.py  transport.py
src/scheduler/: __init__.py  engine.py  tasks.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_docker.py
tests/integration/: __init__.py  (+1 more)
(+19 files in other folders)
