[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vault-operator-agent"
version = "0.1.0"
description = "AI agent that accepts natural-language prompts and executes HashiCorp Vault operations via vault-mcp-server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "vault-operator-agent contributors" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "litellm>=1.0.0",
    "mcp>=1.0.0",
    "apscheduler>=3.10.0,<4.0.0",
    "structlog>=24.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
vault-operator-agent = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "e2e: end-to-end tests requiring a running docker-compose stack (skipped by default)",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
